# SnapPin

./: .gitignore  CMakeLists.txt  README.md
DEV/: 0110-Implementation-Status.md
cmake/: Options.cmake  Warnings.cmake
docs/: Implementation-Status.md  tradeoffs.md
docs/design/: system_architecture.md
docs/spec/: 00-Scope.md  01-Capture.md  02-Pin.md  03-Mark.md  03-Shortcuts-Actions.md  04-Roadmap.md
docs/specs/: 00_overview.md  dev_capture.md  dev_mark.md  dev_pin.md  dev_roadmap.md  dev_shortcuts_actions.md  integration_validation.md  matrix_pixpin_parity.md
docs/specs/legacy/: 02-Pin.md  03-Shortcuts-Actions.md  04-Roadmap.md  README.md
src/app/: ActionDispatcher.cpp  ActionDispatcher.h  ActionRegistry.cpp  ActionRegistry.h  AppMain.cpp  ArtifactStore.cpp  ArtifactStore.h  CMakeLists.txt  CaptureFreeze.cpp  CaptureFreeze.h  ConfigService.cpp  ConfigService.h  KeybindingsService.cpp  KeybindingsService.h  PinManager.cpp  PinManager.h  SingleInstance.cpp  SingleInstance.h  StatsService.cpp  StatsService.h  TrayIcon.cpp  TrayIcon.h
src/capture/: CMakeLists.txt  CaptureService.h  CaptureServiceGdi.cpp  CaptureStub.cpp
src/core/: Action.h  Artifact.h  CMakeLists.txt  CoreStub.cpp  ErrorCodes.h  Stats.h  Types.h
src/export/: CMakeLists.txt  ExportService.cpp  ExportService.h  ExportStub.cpp
src/ui/: AnnotateWindow.cpp  AnnotateWindow.h  CMakeLists.txt  OverlayWindow.cpp  OverlayWindow.h  PinWindow.cpp  PinWindow.h  SettingsWindow.cpp  SettingsWindow.h  ToolbarWindow.cpp  ToolbarWindow.h  UiStub.cpp
tests/: CMakeLists.txt  core_tests.cpp
